# FBX2U3D

./: .gitignore  Cargo.toml  LICENSE  LICENSE_COMPATIBILITY.md  README.md  RELEASING.md  THIRD_PARTY_NOTICES.md  build.rs
.cargo/: config.toml
installer/: FBX2U3D.iss  quick-convert.ps1  quick-convert.vbs
scripts/: build-installer.ps1  install-u3d-sdk.ps1
src/: app.rs  cli.rs  conversion.rs  error.rs  main.rs
